After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707872 - GtkSwitch shouldn't have a default name
GtkSwitch shouldn't have a default name
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Accessibility
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-09-10 17:35 UTC by Alejandro Piñeiro Iglesias (IRC: infapi00)
Modified: 2013-09-11 02:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Not using a default name for switch (1.05 KB, patch)
2013-09-10 17:39 UTC, Alejandro Piñeiro Iglesias (IRC: infapi00)
committed Details | Review

Description Alejandro Piñeiro Iglesias (IRC: infapi00) 2013-09-10 17:35:22 UTC
Right now GtkSwitch has a default name ("light switch widget" or "Switch"). Usually switchs are labelled, so if a switch is focused, it is properly named. ATs use to expose name and the content of the label associated with the widget. Having the default name is useless, and usually not user-friendly.
Comment 1 Alejandro Piñeiro Iglesias (IRC: infapi00) 2013-09-10 17:39:03 UTC
Created attachment 254615 [details] [review]
Not using a default name for switch

It just removes the atk_object_set_name call at gtkswitchaccessible
Comment 2 Matthias Clasen 2013-09-10 21:51:55 UTC
Review of attachment 254615 [details] [review]:

sure
Comment 3 Matthias Clasen 2013-09-10 21:58:32 UTC
Review of attachment 254615 [details] [review]:

sure